# conduit

./: .gitignore  AGENTS.md  Cargo.toml  FORK_SESSION_PLAN.md  README.md  TODO.md
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  release.yml
docs/: ARCHITECTURE_REDESIGN.md  PR-open-text.md  REPRO_HANDOFF_PLAN.md  TESTING_PLAN.md  WEB_UI_TESTING_CHECKLIST.md  battle-mode-design.md
docs/src/: SUMMARY.md  introduction.md
docs/src/concepts/: agents.md
docs/src/configuration/: config-file.md  tool-paths.md
docs/src/getting-started/: first-session.md  installation.md
docs/src/git/: worktrees.md
src/: lib.rs  main.rs
src/agent/: claude.rs  codex.rs  display.rs  events.rs  gemini.rs  history.rs  mock.rs  mod.rs  models.rs  opencode.rs  recording.rs  replay.rs  runner.rs  stream.rs
src/coderabbit/: mod.rs
src/config/: config.toml.example  default_keys.rs  keys.rs  mod.rs  settings.rs
src/core/: conduit_core.rs  mod.rs  repo_settings.rs
src/core/services/: model_service.rs  session_service.rs
src/data/: app_state.rs  app_state_dao.rs  coderabbit.rs  database.rs  fork_seed.rs  migrations.rs  mod.rs  models.rs  repository.rs  repository_dao.rs  session_tab.rs  session_tab_dao.rs  workspace.rs  workspace_dao.rs
src/git/: mod.rs  pr.rs  status.rs  workspace_mode.rs  workspace_repo.rs  worktree.rs
src/repro/: bundle.rs  mod.rs  runtime.rs  scrub.rs  tape.rs  ui_state.rs
src/session/: cache.rs  import.rs  mod.rs
src/ui/: action.rs  app.rs  app_prompt.rs  app_state.rs  capabilities.rs  clipboard_paste.rs  effect.rs  events.rs  git_tracker.rs  mod.rs  session.rs  tab_manager.rs  terminal_guard.rs
src/ui/app/: app_actions_coderabbit.rs  app_actions_confirm.rs  app_actions_confirmation.rs  app_actions_dialog.rs  app_actions_global.rs  app_actions_input_edit.rs  app_actions_list.rs  app_actions_overlay.rs  app_actions_pr.rs  app_actions_scroll.rs  app_actions_sidebar.rs  app_actions_tabs.rs  app_input.rs  app_scroll.rs  app_selection.rs
src/ui/battle/: agent.rs  mod.rs  results.rs  session.rs  state.rs
src/ui/components/: add_repo_dialog.rs  agent_selector.rs  base_dir_dialog.rs  battle_view.rs  chat_message.rs  chat_view.rs  coderabbit_feedback_picker.rs  command_palette.rs  confirmation_dialog.rs  dialog.rs  error_dialog.rs  global_footer.rs  help_dialog.rs  input_box.rs  key_hints.rs  knight_rider_spinner.rs  logo_shine.rs  markdown.rs  mod.rs  model_selector.rs  path_input.rs  project_picker.rs  raw_events_types.rs  raw_events_view.rs  scrollbar.rs  searchable_list.rs  session_header.rs  session_import_picker.rs  sidebar.rs  slash_menu.rs  spinner.rs  splash_screen.rs  status_bar.rs  tab_bar.rs  text_input.rs  theme.rs  theme_picker.rs  thinking_indicator.rs  tree_view.rs  turn_summary.rs
src/util/: mod.rs  names.rs  paths.rs  title_generator.rs  tools.rs
src/web/: error.rs  server.rs
src/web/handlers/: bootstrap.rs  external_sessions.rs  mod.rs  models.rs  onboarding.rs  repositories.rs  repro.rs  sessions.rs  workspaces.rs
src/web/routes/: api.rs
src/web/ws/: handler.rs
tests/: integration_tests.rs
tests/common/: determinism.rs  git_fixtures.rs  mod.rs  terminal.rs
tests/e2e/: lib.sh  run_all.sh  test_navigation.sh  test_project_add.sh  test_startup.sh  test_tab_switch_file_tab.sh
tests/integration/: agent_session.rs  mod.rs  pr_workflow.rs  workspace_flow.rs
web/: package.json  pnpm-lock.yaml
web/src/: App.tsx  index.css
web/src/components/: ChatInput.tsx  ChatView.tsx  ConfirmDialog.tsx  CreateWorkspaceDialog.tsx  FilePathLink.tsx  Header.tsx  HistoryMessage.tsx  Layout.tsx  ModelSelectorDialog.tsx  SessionImportDialog.tsx  SessionStatusIndicator.tsx  SessionTabs.tsx  Sidebar.tsx  ThemeSwitcher.tsx  ToolRunMessage.tsx  index.ts
web/src/hooks/: useApi.ts  useWebSocket.tsx
web/src/lib/: agentCapabilities.ts  api.ts  websocket.ts
web/src/types/: api.ts  websocket.ts
web/tests/e2e/: fixtures.ts  processing-indicators.spec.ts  queue-auto-drain.spec.ts  websearch-tool-card.spec.ts
website/: .env.example  .gitignore  README.md  astro.config.mjs  package-lock.json  package.json  pnpm-lock.yaml
website/public/: install.sh
website/scripts/: invite.ts  reschedule-ga-emails.ts  reset-invite.ts  tail-invites.ts  tail.ts  test-welcome-email.ts
website/src/lib/: email.ts
(+37 files in other folders)
