[package]
name = "conduit"
version = "0.1.2"
edition = "2021"
description = "Multi-agent TUI for Claude Code and Codex CLI"
authors = ["Felipe Coury"]
license = "MIT"
repository = "https://github.com/fcoury/conduit"
readme = "README.md"
keywords = ["tui", "cli", "claude", "ai", "terminal"]
categories = ["command-line-utilities", "development-tools"]

[dependencies]
# Async runtime
tokio = { version = "1.42", features = ["full", "process", "sync", "macros", "rt-multi-thread"] }

# TUI
ratatui = "0.30"
crossterm = { version = "0.28", features = ["event-stream"] }
tui-markdown = "0.3"
pulldown-cmark = { version = "0.13", default-features = false, features = ["simd"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"

# Error handling
thiserror = "1.0"
anyhow = "1.0"

# Async trait
async-trait = "0.1"

# CLI
clap = { version = "4.5", features = ["derive"] }

# Utilities
uuid = { version = "1.11", features = ["v4", "v7", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
which = "7.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
unicode-width = "0.2"
ansi-to-tui = "8.0"
arboard = "3.4"
image = "0.25"
tempfile = "3.14"

# Database
rusqlite = { version = "0.32", features = ["bundled"] }
dirs = "5.0"
rand = "0.9.2"

[target.'cfg(unix)'.dependencies]
libc = "0.2"

[dev-dependencies]
