[package]
name = "conduit-cli"
version = "0.2.0"
edition = "2021"
description = "Multi-agent TUI for Claude Code and Codex CLI"
authors = ["Felipe Coury"]
license = "MIT"
repository = "https://github.com/conduit-cli/conduit"
readme = "README.md"
keywords = ["tui", "cli", "claude", "ai", "terminal"]
categories = ["command-line-utilities", "development-tools"]

[lib]
name = "conduit"
path = "src/lib.rs"

[[bin]]
name = "conduit"
path = "src/main.rs"

[dependencies]
# Async runtime
tokio = { version = "1.42", features = ["full", "process", "sync", "macros", "rt-multi-thread"] }
tokio-util = { version = "0.7", features = ["compat", "io"] }
futures = "0.3"
agent-client-protocol = { version = "0.8", features = ["unstable"] }

# TUI
ratatui = "0.30"
crossterm = { version = "0.28", features = ["event-stream"] }
tui-markdown = "0.3"
pulldown-cmark = { version = "0.13", default-features = false, features = ["simd"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
json5 = "0.4"
toml = "0.8"
toml_edit = "0.22"

# Error handling
thiserror = "1.0"
anyhow = "1.0"

# Async trait
async-trait = "0.1"

# Codex app-server protocol
codex-protocol = { git = "https://github.com/openai/codex.git", rev = "d75626ad9970133b82d9ca3c0914190785a421ea" }
codex-app-server-protocol = { git = "https://github.com/openai/codex.git", rev = "d75626ad9970133b82d9ca3c0914190785a421ea" }

# CLI
clap = { version = "4.5", features = ["derive"] }

# Utilities
uuid = { version = "1.11", features = ["v4", "v7", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
which = "7.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
unicode-width = "0.2"
ansi-to-tui = "8.0"
arboard = "3.4"
image = "0.25"
tempfile = "3.14"
regex = "1"
zip = "0.6"

# Database
rusqlite = { version = "0.32", features = ["bundled"] }
dirs = "5.0"
rand = "0.9.2"

# Cryptography
sha2 = "0.10"

# Encoding
base64 = "0.22"

# Concurrency
parking_lot = "0.12"

# Web server
axum = { version = "0.8", features = ["ws", "macros"] }
axum-extra = { version = "0.10", features = ["typed-header"] }
tower = { version = "0.5", features = ["util"] }
tower-http = { version = "0.6", features = ["fs", "cors", "trace"] }
rust-embed = "8.5"
mime_guess = "2.0"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls", "stream"] }
reqwest-eventsource = "0.6"

[target.'cfg(unix)'.dependencies]
libc = "0.2"

[dev-dependencies]
# Snapshot testing for TUI output
insta = { version = "1.40", features = ["yaml", "json"] }

# Property-based testing for JSONL parsing
proptest = "1.5"

# CLI binary testing
assert_cmd = "2.0"
predicates = "3.1"

# Async test utilities
tokio-test = "0.4"

# HTTP body utilities for tests
http-body-util = "0.1"

# Lazy static for shared fixtures
once_cell = "1.21"
